// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts advanced options fields 1`] = `
<ul
  className="radio-toggle"
>
  <li
    key="one"
  >
    <input
      checked={false}
      id="sample__one"
      name="sample"
      onChange={[Function]}
      type="radio"
    />
    <Tooltip
      overlay="foo"
    >
      <label
        htmlFor="sample__one"
      >
        first
      </label>
    </Tooltip>
  </li>
  <li
    key="two"
  >
    <input
      checked={false}
      disabled={true}
      id="sample__two"
      name="sample"
      onChange={[Function]}
      type="radio"
    />
    <Tooltip
      overlay="bar"
    >
      <label
        htmlFor="sample__two"
      >
        second
      </label>
    </Tooltip>
  </li>
</ul>
`;

exports[`renders 1`] = `
<ul
  className="radio-toggle"
>
  <li
    key="one"
  >
    <input
      checked={false}
      id="sample__one"
      name="sample"
      onChange={[Function]}
      type="radio"
    />
    <Tooltip>
      <label
        htmlFor="sample__one"
      >
        first
      </label>
    </Tooltip>
  </li>
  <li
    key="two"
  >
    <input
      checked={false}
      id="sample__two"
      name="sample"
      onChange={[Function]}
      type="radio"
    />
    <Tooltip>
      <label
        htmlFor="sample__two"
      >
        second
      </label>
    </Tooltip>
  </li>
</ul>
`;
